--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.1.2"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
